--- a/examples/starter/package.json
+++ b/examples/starter/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.9.0",
     "@bodiless/accessibility": "^0.0.70",
     "@bodiless/backend": "^0.0.70",
+    "@bodiless/card": "^0.0.70",
     "@bodiless/components": "^0.0.70",
     "@bodiless/components-ui": "^0.0.70",
     "@bodiless/core": "^0.0.70",
