--- a/packages/bodiless-navigation/package.json
+++ b/packages/bodiless-navigation/package.json
@@ -36,6 +36,7 @@
     "lodash": "^4.17.19",
     "mobx": "^5.8.0",
     "mobx-react-lite": "^1.3.1",
+    "react-helmet": "^5.2.0",
     "uuid": "^3.3.2"
   },
   "peerDependencies": {
