--- a/packages/bodiless-navigation/package.json
+++ b/packages/bodiless-navigation/package.json
@@ -40,6 +40,8 @@
     "mobx": "^5.8.0",
     "mobx-react-lite": "^1.3.1",
     "react-helmet": "^5.2.0",
+    "tailwindcss": "^2.0.2",
+    "tailwindcss-dir": "^4.0.0",
     "uuid": "^3.3.2"
   },
   "peerDependencies": {
