--- a/examples/starter/package.json
+++ b/examples/starter/package.json
@@ -56,15 +56,16 @@
     "url": "https://github.com/johnsonandjohnson/bodiless-js.git"
   },
   "scripts": {
-    "build": "npm-run-all build:env-vars build:lib build:doc build:search",
+    "build": "npm-run-all build:env-vars build:tailwind-configs build:lib build:doc build:search",
     "build:lib": "gatsby build",
     "build:doc": "bl-docs-build",
     "build:env-vars": "generate-env-vars",
+    "build:tailwind-configs": "generate-tailwind-configs",
     "clean": "rimraf ./public/* && rimraf ./.cache",
     "dev-backend": "node ./node_modules/@bodiless/backend/src/server.js",
     "dev-frontend": "gatsby develop",
     "lint": "eslint --cache --ext .js,.jsx,.ts,.tsx .",
-    "prestart": "run-s build:env-vars build:doc",
+    "prestart": "run-s build:env-vars build:tailwind-configs build:doc",
     "build:search": "npm run search-index",
     "start": "run-p -r dev-backend dev-frontend",
     "serve": "gatsby serve",
