--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build:packages": "cross-env NODE_ENV=production lerna run build --stream --no-private",
     "build:watch": "cross-env NODE_ENV=development lerna run build:watch --parallel",
     "build:env-vars": "cross-env NODE_ENV=production lerna run build:env-vars --stream",
+    "build:tailwind-configs": "cross-env NODE_ENV=production lerna run build:tailwind-configs --stream",
     "build:doc": "cross-env NODE_ENV=production lerna run build:doc --stream",
     "build:api-doc": "cross-env NODE_ENV=production lerna run build:api-doc --stream",
     "check": "cross-env NODE_ENV=production lerna run check --stream",
