bodiless/akamai shell creation

--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -26,6 +26,8 @@
       "@bodiless/accessibility/*": ["bodiless-accessibility/src/*"],
       "@bodiless/accordion": ["bodiless-accordion/src"],
       "@bodiless/accordion/*": ["bodiless-accordion/src/*"],
+      "@bodiless/akamai": ["bodiless-akamai/src"],
+      "@bodiless/akamai/*": ["bodiless-akamai/src/*"],
       "@bodiless/bv": ["bodiless-bv/src"],
       "@bodiless/bv/*": ["bodiless-bv/src/*"],
       "@bodiless/card": ["bodiless-card/src"],
