--- a/packages/bodiless-backend/package.json
+++ b/packages/bodiless-backend/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "formidable": "^1.2.1",
+    "fs-extra": "^8.1.0",
     "lodash": "^4.17.19",
     "rimraf": "^2.6.3",
     "tmp": "^0.0.33",
