--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -26,8 +26,6 @@
       "@bodiless/accessibility/*": ["bodiless-accessibility/src/*"],
       "@bodiless/accordion": ["bodiless-accordion/src"],
       "@bodiless/accordion/*": ["bodiless-accordion/src/*"],
-      "@bodiless/akamai": ["bodiless-akamai/src"],
-      "@bodiless/akamai/*": ["bodiless-akamai/src/*"],
       "@bodiless/bv": ["bodiless-bv/src"],
       "@bodiless/bv/*": ["bodiless-bv/src/*"],
       "@bodiless/card": ["bodiless-card/src"],
@@ -49,6 +47,8 @@
       "@bodiless/layouts-ui/*": ["bodiless-layouts-ui/src/*"],
       "@bodiless/navigation": ["bodiless-navigation/src"],
       "@bodiless/navigation/*": ["bodiless-navigation/src/*"],
+      "@bodiless/oicd": ["bodiless-oicd/src"],
+      "@bodiless/oicd/*": ["bodiless-oicd/src/*"],
       "@bodiless/organisms": ["bodiless-organisms/src"],
       "@bodiless/organisms/*": ["bodiless-organisms/src/*"],
       "@bodiless/richtext": ["bodiless-richtext/src"],
