--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -47,8 +47,8 @@
       "@bodiless/layouts-ui/*": ["bodiless-layouts-ui/src/*"],
       "@bodiless/navigation": ["bodiless-navigation/src"],
       "@bodiless/navigation/*": ["bodiless-navigation/src/*"],
-      "@bodiless/oicd": ["bodiless-oicd/src"],
-      "@bodiless/oicd/*": ["bodiless-oicd/src/*"],
+      "@bodiless/oidc": ["bodiless-oidc/src"],
+      "@bodiless/oidc/*": ["bodiless-oidc/src/*"],
       "@bodiless/organisms": ["bodiless-organisms/src"],
       "@bodiless/organisms/*": ["bodiless-organisms/src/*"],
       "@bodiless/richtext": ["bodiless-richtext/src"],
