--- a/packages/bodiless-oidc/package.json
+++ b/packages/bodiless-oidc/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "enzyme": "^3.9.0",
+    "oidc-client-ts": "^2.0.0-beta.2",
     "axios": "^0.21.0"
   },
   "peerDependencies": {
