[AESQ-6723] Fixing .yml

--- a/.github/workflows/build-test-lint-simple.yml
+++ b/.github/workflows/build-test-lint-simple.yml
@@ -26,7 +26,8 @@ jobs:
       - name: Print CI env variables
         run: |
           npm i -g @bahmutov/print-env@2
-          print-env BODILESS GITHUB BUILD ACTIONS || true
+          print-env BODILESS GITHUB BUILD ACTIONS || 
+          
       - name: Print Git Version
         run: git --version
 
@@ -34,11 +35,13 @@ jobs:
         run: |
           git config --global user.name "$(git --no-pager log --format=format:'%an' -n 1)"
           git config --global user.email "$(git --no-pager log --format=format:'%ae' -n 1)"
+
       - name: Git Info
         run: |
           git log  --pretty=oneline | head -n 10
           git config --get user.name
           git config --get user.email
+
       - name: Install dependencies
         run: npm ci
 
