[AESQ-6723] Fixing .yml

--- a/.github/workflows/build-test-lint-simple.yml
+++ b/.github/workflows/build-test-lint-simple.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Print CI env variables
         run: |
           npm i -g @bahmutov/print-env@2
-          print-env BODILESS GITHUB BUILD ACTIONS || 
-          
+          print-env BODILESS GITHUB BUILD ACTIONS || true
+
       - name: Print Git Version
         run: git --version
 
