--- a/packages/bodiless-curator/package.json
+++ b/packages/bodiless-curator/package.json
@@ -31,6 +31,9 @@
     "@bodiless/fclasses": "^0.3.1",
     "lodash": "^4.17.19"
   },
+  "devDependencies": {
+    "enzyme": "^3.9.0"
+  },
   "peerDependencies": {
     "react": "^17.0.2"
   }
