Update bodiless-components side effect file array

--- a/packages/bodiless-components/package.json
+++ b/packages/bodiless-components/package.json
@@ -6,7 +6,7 @@
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "sideEffects": [
-    "./src/Editable.css"
+    "*.css"
   ],
   "typings": "lib/index.d.ts",
   "files": [
