--- a/packages/bodiless-search/package.json
+++ b/packages/bodiless-search/package.json
@@ -30,6 +30,7 @@
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
+    "@bodiless/core": "^0.3.5",
     "@bodiless/fclasses": "^0.3.5",
     "axios": "^0.21.0",
     "cheerio": "1.0.0-rc.3",
