--- a/examples/test-site/.env.site
+++ b/examples/test-site/.env.site
@@ -16,8 +16,9 @@ BODILESS_BACKEND_COMMIT_ENABLED='1'
 # Site's absolute production URL for use in generating Canonical & Sitemap.xml.
 SITE_URL='https://www.example.com/'
 
-# The Google Fonts plugin is disabled by default.
-# To enable it - uncomment the following line.
+# The Google Fonts plugin is disabled in production by default.
+# To enable it - uncomment the line below. Note that Google fonts 
+# are always included in development builds.
 # GOOGLE_FONTS_ENABLED='1'
 
 # GTM is enabled by default.
