--- a/packages/bodiless-cli/package.json
+++ b/packages/bodiless-cli/package.json
@@ -43,7 +43,11 @@
     "@types/lodash.flow": "^3.5.6",
     "fs-extra": "^8.1.0",
     "globby": "^10",
-    "lodash": "^4.17.19"
+    "lodash": "^4.17.19",
+    "dotenv": "^8.2.0",
+    "walkdir": "^0.4.1",
+    "find-up": "^4.1.0",
+    "isomorphic-git": "^1.10.1"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1",
