Build tailwind configs at runtime

--- a/packages/bodiless-cli/package.json
+++ b/packages/bodiless-cli/package.json
@@ -8,8 +8,7 @@
   "main": "./lib/index.js",
   "bin": {
     "bodiless": "./bin/bodiless",
-    "generate-env-vars": "./bin/generate-env-vars",
-    "generate-tailwind-configs": "./bin/generate-tailwind-configs"
+    "generate-env-vars": "./bin/generate-env-vars"
   },
   "directories": {
     "lib": "lib",
