--- a/packages/fclasses/package.json
+++ b/packages/fclasses/package.json
@@ -32,7 +32,8 @@
   },
   "dependencies": {
     "lodash": "^4.17.19",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "babel-plugin-preval": "5.0.0"
   },
   "peerDependencies": {
     "react": "^17.0.2"
