--- a/packages/fclasses/package.json
+++ b/packages/fclasses/package.json
@@ -15,7 +15,8 @@
   "files": [
     "/lib",
     "/doc",
-    "/bodiless.docs.json"
+    "/bodiless.docs.json",
+    "src/tailwindcss/resolveConfig.ts"
   ],
   "publishConfig": {
     "access": "public"
