--- a/sites/test-site/.env.site
+++ b/sites/test-site/.env.site
@@ -81,3 +81,5 @@ BODILESS_DOCS_API_ENABLED=1
 # BODILESS_DEFAULT_CONTENT_AUTO_DISCOVERY_DEPTH='1'
 
 GATSBY_TELEMETRY_DISABLED=1
+
+BODILESS_DOCS_COPYFILES='1'
