Remove Legacy Deps From Launch Test

--- a/.github/workflows/build-test-lint-simple.yml
+++ b/.github/workflows/build-test-lint-simple.yml
@@ -61,5 +61,4 @@ jobs:
         run: npm run test --quiet --colors
 
       - name: Cypress tests
-        run: |
-          npm run test:ci
+        run: npm run test:ci
