--- a/packages/bodiless-documentation/package.json
+++ b/packages/bodiless-documentation/package.json
@@ -34,6 +34,7 @@
     "build:watch": "npm run build -- --watch"
   },
   "dependencies": {
+    "@bodiless/cli": "^0.3.7",
     "@types/fs-extra": "^8.0.0",
     "@types/lodash": "^4.14.158",
     "@types/lodash.flow": "^3.5.6",
