--- a/packages/bodiless-youtube/package.json
+++ b/packages/bodiless-youtube/package.json
@@ -31,6 +31,7 @@
     "@bodiless/components": "^0.3.7",
     "@bodiless/core": "^0.3.7",
     "@bodiless/fclasses": "^0.3.7",
+    "@bodiless/cli": "^0.3.7",
     "lodash": "^4.17.19"
   },
   "peerDependencies": {
