--- a/packages/bodiless-accessibility/package.json
+++ b/packages/bodiless-accessibility/package.json
@@ -25,6 +25,7 @@
     "audit": "node ./index.js $*"
   },
   "dependencies": {
+    "@bodiless/cli": "^0.3.7",
     "arg": "^4.1.1",
     "chalk": "^2.4.2",
     "esm": "^3.2.25",
