--- a/packages/bodiless-backend/package.json
+++ b/packages/bodiless-backend/package.json
@@ -11,6 +11,7 @@
     "bodiless-dev-backend": "./bin/bodiless-dev-backend"
   },
   "dependencies": {
+    "@bodiless/cli": "^0.3.7",
     "body-parser": "^1.18.3",
     "copyfiles": "^2.1.1",
     "dotenv": "^8.2.0",
