--- a/packages/bodiless-carousel/package.json
+++ b/packages/bodiless-carousel/package.json
@@ -31,6 +31,7 @@
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
+    "@bodiless/cli": "^0.3.7",
     "@bodiless/components": "^0.3.7",
     "@bodiless/core": "^0.3.7",
     "@bodiless/fclasses": "^0.3.7",
