--- a/packages/bodiless-core/package.json
+++ b/packages/bodiless-core/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@bodiless/fclasses": "^0.3.7",
+    "@bodiless/cli": "^0.3.7",
     "@types/react-tag-autocomplete": "^6.0.0",
     "enzyme": "^3.9.0",
     "axios": "^0.21.0",
