--- a/packages/bodiless-oidc/package.json
+++ b/packages/bodiless-oidc/package.json
@@ -25,6 +25,7 @@
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
+    "@bodiless/cli": "^0.3.7",
     "axios": "^0.21.0",
     "enzyme": "^3.9.0",
     "oidc-client-ts": "2.0.0-rc.2"
