--- a/packages/bodiless-page/package.json
+++ b/packages/bodiless-page/package.json
@@ -35,6 +35,7 @@
     "@bodiless/core": "^0.3.7",
     "@bodiless/fclasses": "^0.3.7",
     "@bodiless/ui": "^0.3.7",
+    "@bodiless/cli": "^0.3.7",
     "axios": "^0.21.0",
     "informed": "^3.34.0",
     "lodash": "^4.17.19",
