--- a/packages/bodiless-psh/package.json
+++ b/packages/bodiless-psh/package.json
@@ -29,6 +29,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@bodiless/cli": "^0.3.7",
     "copyfiles": "^2.1.1",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.19",
