--- a/packages/bodiless-table/package.json
+++ b/packages/bodiless-table/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@bodiless/core": "^0.3.7",
     "@bodiless/fclasses": "^0.3.7",
+    "@bodiless/cli": "^0.3.7",
     "lodash": "^4.17.19",
     "uuid": "^3.3.2"
   },
