--- a/packages/bodiless-ui/package.json
+++ b/packages/bodiless-ui/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@bodiless/core": "^0.3.7",
     "@bodiless/fclasses": "^0.3.7",
+    "@bodiless/cli": "^0.3.7",
     "autoprefixer": "^10.0.0",
     "informed": "^3.34.0",
     "lodash": "^4.17.19",
