--- a/packages/cx-link/package.json
+++ b/packages/cx-link/package.json
@@ -36,6 +36,7 @@
     "@bodiless/richtext": "^0.3.7",
     "@bodiless/richtext-ui": "^0.3.7",
     "@bodiless/cx-elements": "^0.3.7",
+    "@bodiless/cli": "^0.3.7",
     "lodash": "^4.17.19",
     "tailwindcss": "^2.0.2"
   }
