--- a/packages/__cxstarter__/package.json
+++ b/packages/__cxstarter__/package.json
@@ -29,6 +29,7 @@
     "react": "^17.0.2"
   },
   "dependencies": {
+    "@bodiless/cli": "^0.3.7",
     "@bodiless/components": "^0.3.7",
     "@bodiless/components-ui": "^0.3.7",
     "@bodiless/core": "^0.3.7",
