--- a/packages/bodiless-accessibility/package.json
+++ b/packages/bodiless-accessibility/package.json
@@ -22,6 +22,7 @@
     "access": "public"
   },
   "scripts": {
+    "build": "tsc -p ./tsconfig.json",
     "audit": "node ./index.js $*"
   },
   "dependencies": {
