Update package config for publishing as public packages

--- a/packages/cx-image/package.json
+++ b/packages/cx-image/package.json
@@ -17,6 +17,9 @@
     "type": "git",
     "url": "https://sourcecode.jnj.com/scm/asx-nbfp/canvasx.git"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "tsc -p ./tsconfig.json && npm run build:api-doc",
     "build:watch": "npm run build -- --watch",
