--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "publish:patch": "lerna version patch --conventional-commits --force-publish",
     "publish:minor": "lerna version minor --conventional-commits",
     "publish:major": "lerna version major --conventional-commits",
+    "lerna": "lerna",
     "lerna:publish": "lerna publish from-git --yes --dist-tag latest",
     "lerna:canary": "lerna publish --canary --include-merged-tags --preid ks-canary --dist-tag ks-canary --force-publish",
     "serve": "lerna run serve --scope @sites/test-site --stream",
