--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "sites:update": "npm run sites:pack && npm run sites:install",
     "sites:launch-test": "npm run sites:clone-local test-site && npm run sites:update test-site && cd sites/test-site && npm install --legacy-peer-deps && npm run start",
     "sites:launch-monorepo": "cd sites/test-site && npm run start",
-    "start": "npm run start --workspace=@bodiless/test-site",
+    "start": "lerna run start --stream --scope @bodiless/test-site",
     "sync:fix": "syncpack fix-mismatches",
     "sync:check": "syncpack list-mismatches",
     "test": "jest",
