--- a/.github/workflows/build-test-lint-simple.yml
+++ b/.github/workflows/build-test-lint-simple.yml
@@ -45,11 +45,15 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Check dependency sync
-        run: npm run sync:check
-      
-      - name: Build packages
-        run: npm run build:packages
+        # switch back to monorepo
+        #- name: Check dependency sync
+        #  run: npm run sync:check
+        #
+        #- name: Build packages
+        #  run: npm run build:packages
+
+      - name: Build
+        run: npm run setup
 
       - name: Lint
         run: npm run lint
