--- a/.github/workflows/build-test-lint-simple.yml
+++ b/.github/workflows/build-test-lint-simple.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-        # switch back to monorepo
+        # npm workspace approach
         #- name: Check dependency sync
         #  run: npm run sync:check
         #
