remove github action build flow ci install

--- a/.github/workflows/build-test-lint-simple.yml
+++ b/.github/workflows/build-test-lint-simple.yml
@@ -42,8 +42,8 @@ jobs:
           git config --get user.name
           git config --get user.email
 
-      - name: Install dependencies
-        run: npm ci
+        #- name: Install dependencies
+        #  run: npm ci
 
         # npm workspace approach
         #- name: Check dependency sync
