--- a/packages/bodiless-cli/package.json
+++ b/packages/bodiless-cli/package.json
@@ -7,8 +7,7 @@
   "license": "Apache-2.0",
   "main": "./lib/index.js",
   "bin": {
-    "bodiless": "./bin/bodiless",
-    "generate-env-vars": "./bin/generate-env-vars"
+    "bodiless": "./bin/bodiless"
   },
   "directories": {
     "lib": "lib",
