--- a/packages/bodiless-accessibility/package.json
+++ b/packages/bodiless-accessibility/package.json
@@ -26,7 +26,7 @@
     "audit": "node ./index.js $*"
   },
   "dependencies": {
-    "@bodiless/cli": "^0.3.7",
+    "@bodiless/cli": "^1.0.0-beta.1",
     "arg": "^4.1.1",
     "chalk": "^2.4.2",
     "esm": "^3.2.25",
