--- a/packages/bodiless-backend/package.json
+++ b/packages/bodiless-backend/package.json
@@ -11,7 +11,7 @@
     "bodiless-backend": "./bin/bodiless-backend"
   },
   "dependencies": {
-    "@bodiless/cli": "^0.3.7",
+    "@bodiless/cli": "^1.0.0-beta.1",
     "body-parser": "^1.18.3",
     "copyfiles": "^2.1.1",
     "dotenv": "^8.2.0",
