change packages names to test publish

--- a/packages/bodiless-accessibility/package.json
+++ b/packages/bodiless-accessibility/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bodiless/accessibility",
+  "name": "@asemirsk/accessibility",
   "version": "1.0.0-beta.1",
   "description": "Accessibility tools for bodiless",
   "author": "Ivan Rudiuk <IRudiuk@its.jnj.com>",
