--- a/packages/bodiless-backend/package.json
+++ b/packages/bodiless-backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bodiless/backend",
+  "name": "@asemirsk/backend",
   "version": "1.0.0-beta.1",
   "description": "",
   "main": "",
