--- a/packages/cx-flowcontainer/package.json
+++ b/packages/cx-flowcontainer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bodiless/cx-flowcontainer",
+  "name": "@asemirsk/cx-flowcontainer",
   "version": "1.0.0-beta.1",
   "description": "Flowcontainer tokens for the bodiless cx design system",
   "author": "Chris Odem <coden@its.jnj.com>",
@@ -30,16 +30,16 @@
     "react": "^17.0.2"
   },
   "dependencies": {
-    "@bodiless/components": "^1.0.0-beta.1",
-    "@bodiless/components-ui": "^1.0.0-beta.1",
-    "@bodiless/core": "^1.0.0-beta.1",
-    "@bodiless/cx-elements": "^1.0.0-beta.1",
-    "@bodiless/fclasses": "^1.0.0-beta.1",
-    "@bodiless/layouts": "^1.0.0-beta.1",
-    "@bodiless/layouts-ui": "^1.0.0-beta.1",
-    "@bodiless/richtext": "^1.0.0-beta.1",
-    "@bodiless/richtext-ui": "^1.0.0-beta.1",
-    "@bodiless/tokens": "^1.0.0-beta.1",
+    "@asemirsk/components": "^1.0.0-beta.1",
+    "@asemirsk/components-ui": "^1.0.0-beta.1",
+    "@asemirsk/core": "^1.0.0-beta.1",
+    "@asemirsk/cx-elements": "^1.0.0-beta.1",
+    "@asemirsk/fclasses": "^1.0.0-beta.1",
+    "@asemirsk/layouts": "^1.0.0-beta.1",
+    "@asemirsk/layouts-ui": "^1.0.0-beta.1",
+    "@asemirsk/richtext": "^1.0.0-beta.1",
+    "@asemirsk/richtext-ui": "^1.0.0-beta.1",
+    "@asemirsk/tokens": "^1.0.0-beta.1",
     "lodash": "^4.17.19"
   }
 }
