--- a/packages/cx-layout/package.json
+++ b/packages/cx-layout/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bodiless/cx-layout",
+  "name": "@asemirsk/cx-layout",
   "version": "1.0.0-beta.1",
   "description": "Layout components for the bodiless cx design system",
   "author": "Chris Odem <coden@its.jnj.com>",
@@ -28,14 +28,14 @@
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
-    "@bodiless/components": "^1.0.0-beta.1",
-    "@bodiless/components-ui": "^1.0.0-beta.1",
-    "@bodiless/core": "^1.0.0-beta.1",
-    "@bodiless/cx-editors": "^1.0.0-beta.1",
-    "@bodiless/cx-elements": "^1.0.0-beta.1",
-    "@bodiless/cx-image": "^1.0.0-beta.1",
-    "@bodiless/fclasses": "^1.0.0-beta.1",
-    "@bodiless/gatsby-theme-bodiless": "^1.0.0-beta.1",
+    "@asemirsk/components": "^1.0.0-beta.1",
+    "@asemirsk/components-ui": "^1.0.0-beta.1",
+    "@asemirsk/core": "^1.0.0-beta.1",
+    "@asemirsk/cx-editors": "^1.0.0-beta.1",
+    "@asemirsk/cx-elements": "^1.0.0-beta.1",
+    "@asemirsk/cx-image": "^1.0.0-beta.1",
+    "@asemirsk/fclasses": "^1.0.0-beta.1",
+    "@asemirsk/gatsby-theme-bodiless": "^1.0.0-beta.1",
     "lodash": "^4.17.19",
     "mobx": "^6.0.0",
     "mobx-react": "^7.2.1",
