--- a/sites/__cxstarter__/package.json
+++ b/sites/__cxstarter__/package.json
@@ -12,19 +12,19 @@
   },
   "dependencies": {
     "@babel/core": "^7.9.0",
-    "@bodiless/__cxstarter__": "^1.0.0-beta.1",
-    "@bodiless/backend": "^1.0.0-beta.1",
-    "@bodiless/components": "^1.0.0-beta.1",
-    "@bodiless/core": "^1.0.0-beta.1",
-    "@bodiless/cx-editors": "^1.0.0-beta.1",
-    "@bodiless/cx-elements": "^1.0.0-beta.1",
-    "@bodiless/cx-link": "^1.0.0-beta.1",
-    "@bodiless/cx-templates": "^1.0.0-beta.1",
-    "@bodiless/documentation": "^1.0.0-beta.1",
-    "@bodiless/fclasses": "^1.0.0-beta.1",
-    "@bodiless/gatsby-theme-bodiless": "^1.0.0-beta.1",
-    "@bodiless/search": "^1.0.0-beta.1",
-    "@bodiless/ui": "^1.0.0-beta.1",
+    "@asemirsk/__cxstarter__": "^1.0.0-beta.1",
+    "@asemirsk/backend": "^1.0.0-beta.1",
+    "@asemirsk/components": "^1.0.0-beta.1",
+    "@asemirsk/core": "^1.0.0-beta.1",
+    "@asemirsk/cx-editors": "^1.0.0-beta.1",
+    "@asemirsk/cx-elements": "^1.0.0-beta.1",
+    "@asemirsk/cx-link": "^1.0.0-beta.1",
+    "@asemirsk/cx-templates": "^1.0.0-beta.1",
+    "@asemirsk/documentation": "^1.0.0-beta.1",
+    "@asemirsk/fclasses": "^1.0.0-beta.1",
+    "@asemirsk/gatsby-theme-bodiless": "^1.0.0-beta.1",
+    "@asemirsk/search": "^1.0.0-beta.1",
+    "@asemirsk/ui": "^1.0.0-beta.1",
     "autoprefixer": "^10.0.0",
     "docsify-cli": "^4.3.0",
     "dotenv": "^8.2.0",
@@ -61,7 +61,7 @@
     "build:tailwind-configs": "cross-env BODILESS_NPM_ROOT='.' generate-tailwind-configs",
     "check": "tsc -p ./tsconfig.check.json",
     "clean": "rimraf ./public/* ./.cache",
-    "dev-backend": "node ./node_modules/@bodiless/backend/src/server.js",
+    "dev-backend": "node ./node_modules/@asemirsk/backend/src/server.js",
     "dev-frontend": "gatsby develop -p 8005",
     "prepare": "node ../../scripts/set-missing-symlinks.js @bodiless",
     "prestart": "run-s build:env-vars build:tailwind-configs build:doc",
