--- a/packages/__cxstarter__/package.json
+++ b/packages/__cxstarter__/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bodiless/__cxstarter__",
+  "name": "@asemirsk/__cxstarter__",
   "sideEffects": false,
   "version": "1.0.0-beta.1",
   "description": "",
@@ -30,17 +30,17 @@
     "react": "^17.0.2"
   },
   "dependencies": {
-    "@bodiless/components": "^1.0.0-beta.1",
-    "@bodiless/components-ui": "^1.0.0-beta.1",
-    "@bodiless/core": "^1.0.0-beta.1",
-    "@bodiless/cx-editors": "^1.0.0-beta.1",
-    "@bodiless/cx-elements": "^1.0.0-beta.1",
-    "@bodiless/cx-layout": "^1.0.0-beta.1",
-    "@bodiless/cx-link": "^1.0.0-beta.1",
-    "@bodiless/cx-templates": "^1.0.0-beta.1",
-    "@bodiless/fclasses": "^1.0.0-beta.1",
-    "@bodiless/richtext": "^1.0.0-beta.1",
-    "@bodiless/richtext-ui": "^1.0.0-beta.1",
+    "@asemirsk/components": "^1.0.0-beta.1",
+    "@asemirsk/components-ui": "^1.0.0-beta.1",
+    "@asemirsk/core": "^1.0.0-beta.1",
+    "@asemirsk/cx-editors": "^1.0.0-beta.1",
+    "@asemirsk/cx-elements": "^1.0.0-beta.1",
+    "@asemirsk/cx-layout": "^1.0.0-beta.1",
+    "@asemirsk/cx-link": "^1.0.0-beta.1",
+    "@asemirsk/cx-templates": "^1.0.0-beta.1",
+    "@asemirsk/fclasses": "^1.0.0-beta.1",
+    "@asemirsk/richtext": "^1.0.0-beta.1",
+    "@asemirsk/richtext-ui": "^1.0.0-beta.1",
     "lodash": "^4.17.19",
     "tailwindcss": "^2.0.2"
   }
