--- a/packages/bodiless-accordion/package.json
+++ b/packages/bodiless-accordion/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bodiless/accordion",
+  "name": "@asemirsk/accordion",
   "version": "1.0.0-beta.1",
   "description": "Basic accordion component.",
   "author": "Guilherme Zeni <gzeni@its.jnj.com>",
@@ -26,9 +26,9 @@
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
-    "@bodiless/components": "^1.0.0-beta.1",
-    "@bodiless/core": "^1.0.0-beta.1",
-    "@bodiless/fclasses": "^1.0.0-beta.1",
+    "@asemirsk/components": "^1.0.0-beta.1",
+    "@asemirsk/core": "^1.0.0-beta.1",
+    "@asemirsk/fclasses": "^1.0.0-beta.1",
     "lodash": "^4.17.19",
     "react-contenteditable": "^3.2.6",
     "react-dropzone": "^10.1.5",
