--- a/packages/bodiless-bv/package.json
+++ b/packages/bodiless-bv/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bodiless/bv",
+  "name": "@asemirsk/bv",
   "version": "1.0.0-beta.1",
   "description": "Provides bazaarvoice components.",
   "author": "Andrei Beliayeu <abeliaye@its.jnj.com>",
@@ -27,9 +27,9 @@
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
-    "@bodiless/components": "^1.0.0-beta.1",
-    "@bodiless/core": "^1.0.0-beta.1",
-    "@bodiless/fclasses": "^1.0.0-beta.1",
+    "@asemirsk/components": "^1.0.0-beta.1",
+    "@asemirsk/core": "^1.0.0-beta.1",
+    "@asemirsk/fclasses": "^1.0.0-beta.1",
     "lodash": "^4.17.19"
   },
   "peerDependencies": {
