--- a/packages/bodiless-card/package.json
+++ b/packages/bodiless-card/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bodiless/card",
+  "name": "@asemirsk/card",
   "version": "1.0.0-beta.1",
   "description": "Basic components to build out sites.",
   "author": "Guilherme Zeni <gzeni@its.jnj.com>",
@@ -29,8 +29,8 @@
     "copy": "copyfiles -u 1 \"./src/**/*.{css,png}\" \"./lib/\""
   },
   "dependencies": {
-    "@bodiless/core": "^1.0.0-beta.1",
-    "@bodiless/fclasses": "^1.0.0-beta.1",
+    "@asemirsk/core": "^1.0.0-beta.1",
+    "@asemirsk/fclasses": "^1.0.0-beta.1",
     "lodash": "^4.17.19",
     "uuid": "^3.3.2"
   },
