--- a/packages/bodiless-cli/package.json
+++ b/packages/bodiless-cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bodiless/cli",
+  "name": "@asemirsk/cli",
   "version": "1.0.0-beta.1",
   "description": "A cli tool for Bodiless-JS",
   "author": "Chris Oden <coden@its.jnj.com>",
