--- a/packages/bodiless-components-ui/package.json
+++ b/packages/bodiless-components-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bodiless/components-ui",
+  "name": "@asemirsk/components-ui",
   "version": "1.0.0-beta.1",
   "description": "Default UI for Bodiless components",
   "author": "Andrei Beliayeu <abeliaye@its.jnj.com>",
@@ -26,12 +26,12 @@
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
-    "@bodiless/components": "^1.0.0-beta.1",
-    "@bodiless/core": "^1.0.0-beta.1",
-    "@bodiless/fclasses": "^1.0.0-beta.1",
-    "@bodiless/layouts": "^1.0.0-beta.1",
-    "@bodiless/layouts-ui": "^1.0.0-beta.1",
-    "@bodiless/ui": "^1.0.0-beta.1",
+    "@asemirsk/components": "^1.0.0-beta.1",
+    "@asemirsk/core": "^1.0.0-beta.1",
+    "@asemirsk/fclasses": "^1.0.0-beta.1",
+    "@asemirsk/layouts": "^1.0.0-beta.1",
+    "@asemirsk/layouts-ui": "^1.0.0-beta.1",
+    "@asemirsk/ui": "^1.0.0-beta.1",
     "lodash": "^4.17.19"
   },
   "peerDependencies": {
