--- a/packages/bodiless-components/package.json
+++ b/packages/bodiless-components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bodiless/components",
+  "name": "@asemirsk/components",
   "version": "1.0.0-beta.1",
   "description": "Reusable compoments",
   "author": "Heidi Vanyo <hvanyo@its.jnj.com>",
@@ -31,10 +31,10 @@
     "copy": "copyfiles -u 1 \"./src/**/*.{css,png}\" \"./lib/\""
   },
   "dependencies": {
-    "@bodiless/core": "^1.0.0-beta.1",
-    "@bodiless/fclasses": "^1.0.0-beta.1",
-    "@bodiless/layouts": "^1.0.0-beta.1",
-    "@bodiless/ui": "^1.0.0-beta.1",
+    "@asemirsk/core": "^1.0.0-beta.1",
+    "@asemirsk/fclasses": "^1.0.0-beta.1",
+    "@asemirsk/layouts": "^1.0.0-beta.1",
+    "@asemirsk/ui": "^1.0.0-beta.1",
     "axios": "^0.21.0",
     "common-tags": "^1.8.0",
     "copyfiles": "^2.1.1",
