--- a/packages/bodiless-gtm/package.json
+++ b/packages/bodiless-gtm/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bodiless/gtm",
+  "name": "@asemirsk/gtm",
   "version": "1.0.0-beta.1",
   "description": "Provides integration to support DataLayer in GTM",
   "author": "Heidi Vanyo <hvanyo@its.jnj.com>",
@@ -27,8 +27,8 @@
     "copy": "copyfiles -u 1 \"./src/**/*.{css,png}\" \"./lib/\""
   },
   "dependencies": {
-    "@bodiless/components": "^1.0.0-beta.1",
-    "@bodiless/core": "^1.0.0-beta.1",
+    "@asemirsk/components": "^1.0.0-beta.1",
+    "@asemirsk/core": "^1.0.0-beta.1",
     "common-tags": "^1.8.0",
     "lodash": "^4.17.19"
   },
