--- a/packages/bodiless-navigation/package.json
+++ b/packages/bodiless-navigation/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bodiless/navigation",
+  "name": "@asemirsk/navigation",
   "version": "1.0.0-beta.1",
   "description": "BodilessJs Navigation Components",
   "author": "Ivan Rudiuk <IRudiuk@its.jnj.com>",
@@ -29,13 +29,13 @@
     "copy": "copyfiles -u 1 \"./src/**/*.{css,png}\" \"./lib/\""
   },
   "dependencies": {
-    "@bodiless/accordion": "^1.0.0-beta.1",
-    "@bodiless/card": "^1.0.0-beta.1",
-    "@bodiless/components": "^1.0.0-beta.1",
-    "@bodiless/components-ui": "^1.0.0-beta.1",
-    "@bodiless/core": "^1.0.0-beta.1",
-    "@bodiless/fclasses": "^1.0.0-beta.1",
-    "@bodiless/organisms": "^1.0.0-beta.1",
+    "@asemirsk/accordion": "^1.0.0-beta.1",
+    "@asemirsk/card": "^1.0.0-beta.1",
+    "@asemirsk/components": "^1.0.0-beta.1",
+    "@asemirsk/components-ui": "^1.0.0-beta.1",
+    "@asemirsk/core": "^1.0.0-beta.1",
+    "@asemirsk/fclasses": "^1.0.0-beta.1",
+    "@asemirsk/organisms": "^1.0.0-beta.1",
     "enzyme": "^3.9.0",
     "lodash": "^4.17.19",
     "uuid": "^3.3.2"
