--- a/packages/bodiless-organisms/package.json
+++ b/packages/bodiless-organisms/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bodiless/organisms",
+  "name": "@asemirsk/organisms",
   "version": "1.0.0-beta.1",
   "description": "Basic components to build out sites.",
   "author": "Ivan Rudiuk <IRudiuk@its.jnj.com>",
@@ -29,14 +29,14 @@
     "copy": "copyfiles -u 1 \"./src/**/*.{css,png}\" \"./lib/\""
   },
   "dependencies": {
-    "@bodiless/accordion": "^1.0.0-beta.1",
-    "@bodiless/bv": "^1.0.0-beta.1",
-    "@bodiless/components": "^1.0.0-beta.1",
-    "@bodiless/components-ui": "^1.0.0-beta.1",
-    "@bodiless/core": "^1.0.0-beta.1",
-    "@bodiless/fclasses": "^1.0.0-beta.1",
-    "@bodiless/richtext": "^1.0.0-beta.1",
-    "@bodiless/richtext-ui": "^1.0.0-beta.1",
+    "@asemirsk/accordion": "^1.0.0-beta.1",
+    "@asemirsk/bv": "^1.0.0-beta.1",
+    "@asemirsk/components": "^1.0.0-beta.1",
+    "@asemirsk/components-ui": "^1.0.0-beta.1",
+    "@asemirsk/core": "^1.0.0-beta.1",
+    "@asemirsk/fclasses": "^1.0.0-beta.1",
+    "@asemirsk/richtext": "^1.0.0-beta.1",
+    "@asemirsk/richtext-ui": "^1.0.0-beta.1",
     "@types/react-burger-menu": "^2.6.0",
     "@types/react-tag-autocomplete": "^6.0.0",
     "lodash": "^4.17.19",
