--- a/packages/bodiless-psh/package.json
+++ b/packages/bodiless-psh/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bodiless/psh",
+  "name": "@asemirsk/psh",
   "version": "1.0.0-beta.1",
   "description": "Provides cli tool for initializing a bodiless project on platform.sh",
   "author": "Chris Oden <coden@its.jnj.com>",
