--- a/packages/bodiless-richtext-ui/package.json
+++ b/packages/bodiless-richtext-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bodiless/richtext-ui",
+  "name": "@asemirsk/richtext-ui",
   "version": "1.0.0-beta.1",
   "description": "Default UI for Bodiless richtext components",
   "author": "Ivan Rudiuk <IRudiuk@its.jnj.com>",
@@ -26,9 +26,9 @@
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
-    "@bodiless/fclasses": "^1.0.0-beta.1",
-    "@bodiless/richtext": "^1.0.0-beta.1",
-    "@bodiless/ui": "^1.0.0-beta.1",
+    "@asemirsk/fclasses": "^1.0.0-beta.1",
+    "@asemirsk/richtext": "^1.0.0-beta.1",
+    "@asemirsk/ui": "^1.0.0-beta.1",
     "lodash": "^4.17.19"
   },
   "peerDependencies": {
