--- a/packages/bodiless-richtext/package.json
+++ b/packages/bodiless-richtext/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bodiless/richtext",
+  "name": "@asemirsk/richtext",
   "version": "1.0.0-beta.1",
   "description": "Provide Rich Text Component",
   "author": "Erik Summerfield <esummer3@its.jnj.com>",
@@ -30,8 +30,8 @@
     "postinstall": "node bin/apply-patches.js"
   },
   "dependencies": {
-    "@bodiless/core": "^1.0.0-beta.1",
-    "@bodiless/fclasses": "^1.0.0-beta.1",
+    "@asemirsk/core": "^1.0.0-beta.1",
+    "@asemirsk/fclasses": "^1.0.0-beta.1",
     "@emotion/core": "^10.0.14",
     "@emotion/css": "^10.0.14",
     "@emotion/styled": "^10.0.14",
