--- a/packages/bodiless-search/package.json
+++ b/packages/bodiless-search/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bodiless/search",
+  "name": "@asemirsk/search",
   "version": "1.0.0-beta.1",
   "description": "Provide static site search option for Bodiless project.",
   "author": "Dewen Li <dli94@its.jnj.com>",
@@ -30,8 +30,8 @@
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
-    "@bodiless/core": "^1.0.0-beta.1",
-    "@bodiless/fclasses": "^1.0.0-beta.1",
+    "@asemirsk/core": "^1.0.0-beta.1",
+    "@asemirsk/fclasses": "^1.0.0-beta.1",
     "axios": "^0.21.0",
     "cheerio": "1.0.0-rc.3",
     "dotenv": "^8.2.0",
