--- a/packages/bodiless-table/package.json
+++ b/packages/bodiless-table/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bodiless/table",
+  "name": "@asemirsk/table",
   "version": "1.0.0-beta.1",
   "description": "Provide a Bodiless table component and HOC to make it editable",
   "author": "Erik Summerfield <esummer3@its.jnj.com>",
@@ -27,8 +27,8 @@
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
-    "@bodiless/core": "^1.0.0-beta.1",
-    "@bodiless/fclasses": "^1.0.0-beta.1",
+    "@asemirsk/core": "^1.0.0-beta.1",
+    "@asemirsk/fclasses": "^1.0.0-beta.1",
     "lodash": "^4.17.19",
     "uuid": "^3.3.2"
   },
