--- a/packages/bodiless-tokens/package.json
+++ b/packages/bodiless-tokens/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bodiless/tokens",
+  "name": "@asemirsk/tokens",
   "version": "1.0.0-beta.1",
   "description": "Utilities for browsing and organizing tokens.",
   "author": "Chris Oden <coden@its.jnj.com>",
@@ -31,10 +31,10 @@
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
-    "@bodiless/core": "^1.0.0-beta.1",
-    "@bodiless/fclasses": "^1.0.0-beta.1",
-    "@bodiless/layouts": "^1.0.0-beta.1",
-    "@bodiless/layouts-ui": "^1.0.0-beta.1",
+    "@asemirsk/core": "^1.0.0-beta.1",
+    "@asemirsk/fclasses": "^1.0.0-beta.1",
+    "@asemirsk/layouts": "^1.0.0-beta.1",
+    "@asemirsk/layouts-ui": "^1.0.0-beta.1",
     "informed": "^3.34.0",
     "lodash": "^4.17.19",
     "md5-hex": "^4.0.0",
