--- a/packages/cx-elements/package.json
+++ b/packages/cx-elements/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bodiless/cx-elements",
+  "name": "@asemirsk/cx-elements",
   "version": "1.0.0-beta.1",
   "description": "Layout components for the bodiless cx design system",
   "author": "Chris Odem <coden@its.jnj.com>",
@@ -30,9 +30,9 @@
     "lint": "tslint ./src/**/*.ts?x"
   },
   "dependencies": {
-    "@bodiless/components": "^1.0.0-beta.1",
-    "@bodiless/core": "^1.0.0-beta.1",
-    "@bodiless/fclasses": "^1.0.0-beta.1",
+    "@asemirsk/components": "^1.0.0-beta.1",
+    "@asemirsk/core": "^1.0.0-beta.1",
+    "@asemirsk/fclasses": "^1.0.0-beta.1",
     "@types/webpack": "^5.0.0",
     "lodash": "^4.17.19",
     "mobx": "^6.0.0",
