--- a/packages/fclasses/package.json
+++ b/packages/fclasses/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bodiless/fclasses",
+  "name": "@asemirsk/fclasses",
   "version": "1.0.0-beta.1",
   "description": "Allows for the injection of functional class into components.",
   "author": "Chris Oden <coden@its.jnj.com>",
