--- a/packages/gatsby-theme-bodiless/package.json
+++ b/packages/gatsby-theme-bodiless/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bodiless/gatsby-theme-bodiless",
+  "name": "@asemirsk/gatsby-theme-bodiless",
   "version": "1.0.0-beta.1",
   "description": "A Gatsby theme for BodilessJS",
   "author": "Chris Oden <coden@its.jnj.com>",
@@ -50,18 +50,18 @@
     "copy": "copyfiles -u 1 \"./src/dist/**/*.{json,jpg,png}\" \".\""
   },
   "dependencies": {
-    "@bodiless/accordion": "^1.0.0-beta.1",
-    "@bodiless/card": "^1.0.0-beta.1",
-    "@bodiless/components": "^1.0.0-beta.1",
-    "@bodiless/components-ui": "^1.0.0-beta.1",
-    "@bodiless/core": "^1.0.0-beta.1",
-    "@bodiless/core-ui": "^1.0.0-beta.1",
-    "@bodiless/fclasses": "^1.0.0-beta.1",
-    "@bodiless/layouts": "^1.0.0-beta.1",
-    "@bodiless/navigation": "^1.0.0-beta.1",
-    "@bodiless/organisms": "^1.0.0-beta.1",
-    "@bodiless/page": "^1.0.0-beta.1",
-    "@bodiless/ui": "^1.0.0-beta.1",
+    "@asemirsk/accordion": "^1.0.0-beta.1",
+    "@asemirsk/card": "^1.0.0-beta.1",
+    "@asemirsk/components": "^1.0.0-beta.1",
+    "@asemirsk/components-ui": "^1.0.0-beta.1",
+    "@asemirsk/core": "^1.0.0-beta.1",
+    "@asemirsk/core-ui": "^1.0.0-beta.1",
+    "@asemirsk/fclasses": "^1.0.0-beta.1",
+    "@asemirsk/layouts": "^1.0.0-beta.1",
+    "@asemirsk/navigation": "^1.0.0-beta.1",
+    "@asemirsk/organisms": "^1.0.0-beta.1",
+    "@asemirsk/page": "^1.0.0-beta.1",
+    "@asemirsk/ui": "^1.0.0-beta.1",
     "@types/walk": "^2.3.0",
     "autoprefixer": "^10.0.0",
     "axios": "^0.21.0",
