adding scerted to action

--- a/.github/workflows/lerna-pr-canary-release.yml
+++ b/.github/workflows/lerna-pr-canary-release.yml
@@ -22,6 +22,7 @@ jobs:
         run: npm run setup
       - name: Publish Canary Release
         run: >
+          echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" >> $HOME/.npmrc 2> /dev/null &&
           npm run lerna publish --
           --canary
           --exact
