testing fixes form Heidi

--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -30,7 +30,7 @@ hooks:
         set -e
         npm run bootstrap
         npm run build:packages
-        npm run build -- --scope @sites/test-site
+        npm run build -- --scope @sites/$APP_SITE_NAME
         #robots.txt preparation
         export PSH_URL_REPLACER_SRC_FILE=$PLATFORM_DOCUMENT_ROOT/robots.txt
         export PSH_URL_REPLACER_TMP_FILE=$PLATFORM_DOCUMENT_ROOT/../static/robots_pshtmp.txt
@@ -45,7 +45,7 @@ hooks:
         export SSI_CONF_PATH=sites/test-site/ssi/ssi_conf.json
         export DOCUMENT_ROOT=$PLATFORM_DOCUMENT_ROOT
         export VOLUME_DIR=$APP_VOLUME
-        node $PLATFORM_APP_DIR/packages/bodiless-psh/lib/generate-ssi-files.js build    
+        node $PLATFORM_APP_DIR/packages/bodiless-psh/lib/generate-ssi-files.js build
     deploy: |
         #processing site url
         APP_SITE_URL=$(echo $APP_SITE_URL | sed -e "s/\${PLATFORM_ENVIRONMENT}/$PLATFORM_ENVIRONMENT/g")
@@ -67,7 +67,7 @@ hooks:
         # ssi files generation
         export SSI_CONF_PATH=sites/test-site/ssi/ssi_conf.json
         export VOLUME_DIR=$APP_VOLUME
-        node $PLATFORM_APP_DIR/packages/bodiless-psh/lib/generate-ssi-files.js deploy       
+        node $PLATFORM_APP_DIR/packages/bodiless-psh/lib/generate-ssi-files.js deploy
 
 # The size of the persistent disk of the application (in MB).
 disk: 320
