Hardcode __cxstarter__ deployment for edit env

--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "sites:clone-local": "node ./scripts/sites-clone",
     "sites:install": "node ./scripts/sites-install",
     "sites:update": "npm run sites:pack && npm run sites:install",
-    "sites:launch-test": "npm run sites:clone-local test-site && npm run sites:update test-site && cd sites/test-site && npm install --legacy-peer-deps && npm run start",
-    "sites:launch-monorepo": "cd sites/test-site && npm run start",
+    "sites:launch-test": "npm run sites:clone-local __cxstarter__ && npm run sites:update __cxstarter__ && cd sites/__cxstarter__ && npm install --legacy-peer-deps && npm run start",
+    "sites:launch-monorepo": "cd sites/__cxstarter__ && npm run start",
     "start": "lerna run start --stream --scope @sites/__cxstarter__",
     "sync:fix": "syncpack fix-mismatches",
     "sync:check": "syncpack list-mismatches",
